--- a/frontend/src/app/dashboard/header/header.component.html
+++ b/frontend/src/app/dashboard/header/header.component.html
@@ -6,6 +6,10 @@
     <ul class="nav navbar-nav">
       <li><a [routerLink]="['clients-list']">All clients</a></li>
       <li><a [routerLink]="['new-client']">New client</a></li>
+      <li><a [routerLink]="['products-list']">All products</a></li>
+      <li><a [routerLink]="['new-product']">New product</a></li>
+      <li><a [routerLink]="['orders-list']">All orders</a></li>
+      <li><a [routerLink]="['new-order']">New order</a></li>
     </ul>
   </div>
 </nav>
